--- a/index.html
+++ b/index.html
@@ -158,31 +158,31 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bakti Monitoring</h3>
-                            <p>Mengerjakan project website monitoring router dan sistem pengiriman pesan saat ada masalah. Website ini diintegerasikan dengan beberapa aplikasi pihak ketiga untuk membantu berjalannya fitur-fiturnya dengan menggunakan via API.</p>
+                            <p>Bakti Monitoring adalah sebuah website monitoring yang berfungsi untuk mengawasi perangkat-perangkat jaringan. Selain untuk mengawasi perangkat, website ini juga dapat digunakan untuk mengirimkan pesan. Pesan tersebut dikirimkan jika ada perangkat yang bermasalah. Untuk monitoring perangkat, website ini berintegerasikan dengan Zabbix. Untuk bagian pesan menggunakan Redmine. Dari Zabbix maupun Redmine di integerasikan menggunakan api. Pada saat saya mengerjakan, website ini dibuat menggunakan framework laravel 9.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Psikotes Online</h3>
-                            <p>Mengerjakan project website psikotes online pada bagian pengelolaan data pengguna dan pembayaran. Untuk sistem pembayarannya website ini diintegerasikan dengan sebuah payment gateway.</p>
+                            <p>Psikotes adalah suatu evaluasi atau tes tulis yang dilakukan ahli psikologi atau psikolog.Pada project website psikotes online saya mengerjakan pada bagian pengelolaan data pengguna dan pembayaran. Untuk sistem pembayarannya website ini diintegerasikan dengan sebuah payment gateway. Payment gateway yang dipakai adalah midtrans dan website ini dibuat menggunakan codeigniter 3 untuk mempermudah pengerjaannya.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Website Perpustakaan</h3>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Sebuah project untuk salah satu mata kuliah yang dapat digunakan sebagai prototype untuk bahan tugas akhir, dan prototype ini dapat digunakan atau tidak terserah kita sebagai mahasiswa.<hr>source link : <a href="http://github.com/mochoktas/perpus_laravel">klik disini</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Video Olivia</h3>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Olivia adalah singkatan dari Olimpiade Vokasi Indonesia itu adalah salah satu lomba yang diadakan oleh ITS.Dalam Project ini saya bertugas sebagai editor dalam pembuatan video untuk lomba olivia ini.<hr>Video demo : <a href="http://">klik disini</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Website IDS</h3>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="http://">klik disini</a></p>
                         </div>
                     </div>
                 </div>
