--- a/index.html
+++ b/index.html
@@ -175,14 +175,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Video Olivia</h3>
-                            <p>Olivia adalah singkatan dari Olimpiade Vokasi Indonesia itu adalah salah satu lomba yang diadakan oleh ITS.Dalam Project ini saya bertugas sebagai editor dalam pembuatan video untuk lomba olivia ini.<hr>Video demo : <a href="http://">klik disini</a></p>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">Website IDS</h3>
-                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="http://">klik disini</a></p>
+                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="https://youtu.be/JkovSClwjgk">klik disini</a></p>
                         </div>
                     </div>
                 </div>
