--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
                         Keputih Tegal 1 no. 8 · Surabaya, 60111 · (+62) 8133-4556-015 ·
                         <a href="mailto:name@email.com">tian.saktiawan@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am experienced in web developer.
+                        In web developer I have experience from small to large business processes.
+                        I have experience using php, html, laravel, wordpress
+                        </p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://www.linkedin.com/in/mochoktas/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mochoktas"><i class="fab fa-github"></i></a>
