edit link yutub

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Website IDS</h3>
-                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="https://youtu.be/JkovSClwjgk">klik disini</a></p>
+                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="https://youtu.be/ICIe_wkjOvc">klik disini</a></p>
                         </div>
                     </div>
                 </div>
