--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2018</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">SMAN 1 Surabaya</h3>
+                            <div class="subheading mb-3">IPA</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2014 - 2017</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
