--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
                     <h2 class="mb-5">Project</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Monitoring Inventori</h3>
+                            <p>Monitoring Inventori adalah sebuah website monitoring yang berfungsi untuk mengawasi alat-alat kerja dari para teknisi yang rusak. Pada saat saya mengerjakan, website ini dibuat menggunakan framework laravel 11.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Bakti Monitoring</h3>
                             <p>Bakti Monitoring adalah sebuah website monitoring yang berfungsi untuk mengawasi perangkat-perangkat jaringan. Selain untuk mengawasi perangkat, website ini juga dapat digunakan untuk mengirimkan pesan. Pesan tersebut dikirimkan jika ada perangkat yang bermasalah. Untuk monitoring perangkat, website ini berintegerasikan dengan Zabbix. Untuk bagian pesan menggunakan Redmine. Dari Zabbix maupun Redmine di integerasikan menggunakan api. Pada saat saya mengerjakan, website ini dibuat menggunakan framework laravel 9.</p>
                         </div>
@@ -185,8 +191,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Website IDS</h3>
-                            <p>Sebuah project website untuk mata kuliah IDS yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="https://youtu.be/ICIe_wkjOvc">klik disini</a></p>
+                            <h3 class="mb-0">Website Implementasi dan Deployment Sistem</h3>
+                            <p>Sebuah project website untuk mata kuliah Implementasi dan Deployment Sistem yang memiliki fitur-fitur yang nantinya dapat digunakan mahasiswa saat dibutuhkan.<hr>Source link : <a href="http://github.com/mochoktas/implementasi">klik disini</a> <hr>Video demo : <a href="https://youtu.be/ICIe_wkjOvc">klik disini</a></p>
                         </div>
                     </div>
                 </div>
