--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     Moch.
-                    <span class="text-primary">Okta S</span>
+                    <span class="text-primary">Okta S.</span>
                 </h1>
                 <div class="subheading mb-5">
                     Keputih Tegal 1 no. 8 · Surabaya, 60111 · (+62) 8133-4556-015 ·
