--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
                 <h2 class="mb-5">Project</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Tsurya Sang Gemilang Consultan Company Profile</h3>
+                        <p>Sebuah Website untuk perusahaan Tsurya Sang Gemilang Consultan.
+                            Perusahaan yang bergerak pada bidang konsultasi dan pelatihan pada UMKM, perusahaan, maupun
+                            instansi tentang dunia marketing.
+                            <hr>website : <a href="https://tsgc.rf.gd">klik disini</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Monitoring Inventori</h3>
                         <p>Monitoring Inventori adalah sebuah website monitoring yang berfungsi untuk mengawasi
                             alat-alat kerja dari para teknisi yang rusak. Pada saat saya mengerjakan, website ini dibuat
